applications/lidarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: lidarr
  name: lidarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: lidarr
    spec:
      securityContext:
        runAsUser: 3000
        runAsGroup: 3000
        fsGroup: 3000
      containers:
        - image: linuxserver/lidarr:2.9.4-develop
          name: lidarr
          ports:
            - containerPort: 8686
          resources: {}
          volumeMounts:
            - mountPath: "/config"
              name: lidarr-vol
            - mountPath: "/downloads"
              name: downloads-vol
            - mountPath: "/media"
              name: media-vol
      volumes:
        - name: downloads-vol
          persistentVolumeClaim:
            claimName: downloads-pvc
        - name: media-vol
          persistentVolumeClaim:
            claimName: media-pvc
        - name: lidarr-vol
          persistentVolumeClaim:
            claimName: lidarr-pvc
status: {}
