applications/lidarr/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: lidarr
  name: lidarr-svc
  namespace: media
spec:
  ports:
    - port: 8686
      protocol: TCP
      targetPort: 8686
  selector:
    app: lidarr
status:
  loadBalancer: {}
