applications/lidarr/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: lidarr-ingress
  namespace: media
spec:
  # tls:
  #   - hosts:
  #       - music.home.arpa
  #     secretName: home-arpa-tls
  ingressClassName: nginx
  rules:
    - host: music.bugaychuk.com
      http:
        paths:
          - backend:
              service:
                name: lidarr-svc
                port:
                  number: 8686
            path: /
            pathType: Exact
    - host: music.home.arpa
      http:
        paths:
          - backend:
              service:
                name: lidarr-svc
                port:
                  number: 8686
            path: /
            pathType: Exact
status:
  loadBalancer: {}
